--- a/vuejs/08-axios/presentation/index.html
+++ b/vuejs/08-axios/presentation/index.html
@@ -195,6 +195,114 @@
     </div>
 </section>
 
+<section class="slide">
+    <h2>Організація шару API</h2>
+    <p>Винесення шару API в окремі ендпойнти в Vue додатку має кілька важливих переваг:</p>
+    <ul style="font-size: 19px;">
+        <li>
+            <b>Чітка структура коду.</b> Винесення запитів до API в окремі ендпойнти створює чисту і зрозумілу структуру
+            коду, де кожна частина застосунку відповідає за свою функціональність. Компоненти відповідають лише за
+            відображення даних, тоді як ендпойнти API обробляють всю взаємодію з сервером.
+        </li>
+        <li>
+            <b>Полегшення тестування.</b> Легше тестувати компонентний і API шари окремо. Наприклад, можна замінити
+            справжні API-запити на мок-дані під час тестування компонентів, що робить тестування ефективнішим.
+        </li>
+        <li>
+            <b>Спрощення підтримки й рефакторингу.</b> Якщо API зміниться (нові маршрути, нова структура даних),
+            достатньо буде оновити лише шар API, а не шукати зміни по всьому коду. Це зменшує ризик появи помилок.
+        </li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Організація шару API</h2>
+    <p>Винесення шару API в окремі ендпойнти в Vue додатку має кілька важливих переваг:</p>
+    <ul style="font-size: 19px;">
+        <li>
+            <b>Повторне використання логіки. </b>Винесення API запитів в окремий шар дозволяє багаторазово
+            використовувати однакову логіку для різних компонентів. Наприклад, різні частини застосунку можуть
+            отримувати однакові дані з API, використовуючи спільні функції.
+        </li>
+        <li>
+            <b>Легке управління помилками.</b> В окремому шарі API можна централізовано обробляти помилки, додавати
+            логіку повторних спроб або відображати повідомлення про помилку. Це спрощує управління помилками, оскільки
+            вони обробляються в одному місці.
+        </li>
+        <li>
+            <b>Підвищення продуктивності.</b> В окремому API-шарі можна реалізувати кешування, об’єднання запитів або
+            інші оптимізації, що сприяє швидшій роботі застосунку.
+        </li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Принципи створення чистої, структурованої архітектури в Vue застосунку.</h2>
+    <h3>1 - Винесення API у окремі ендпойнти</h3>
+    <p>Це означає створення окремого шару API, який буде відповідати за всю логіку взаємодії з сервером. Для цього
+        створюють окремі функції або модулі, які здійснюють запити до API та повертають дані. Зазвичай цей шар називають
+        "сервісним" або "шаром API".</p>
+    <ul style="font-size: 17px;">
+        <li>
+            Легкість підтримки. Оскільки всі запити API зосереджені в одному місці, їх легше обслуговувати і
+            рефакторити.
+        </li>
+        <li>
+            Централізована обробка помилок. Шар API дозволяє реалізувати єдину логіку для обробки помилок..
+        </li>
+        <li>
+            Кешування й оптимізація. В одному місці можна реалізувати механізми кешування або оптимізації запитів.
+        </li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Принципи створення чистої, структурованої архітектури в Vue застосунку.</h2>
+    <h3>2 - Використання ендпойнтів у store в actions</h3>
+    <p>Pinia (Vuex) дозволяє організувати глобальний стан застосунку, що зручно для зберігання та обробки загальних
+        даних,
+        таких як авторизація, список користувачів тощо. API-запити зазвичай виконуються в actions, оскільки actions
+        підтримують асинхронні операції.</p>
+    <ul style="font-size: 17px;">
+        <li>
+            Єдине джерело правди. Дані, отримані від API, доступні через Pinia і можуть використовуватися в будь-якому
+            компоненті, що полегшує підтримку узгодженості стану.
+        </li>
+        <li>
+            Логічне розділення. Actions виконують асинхронну логіку.
+        </li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2>Принципи створення чистої, структурованої архітектури в Vue застосунку.</h2>
+    <h3>3 - Виклик actions тільки в компонентах</h3>
+    <p>Цей принцип означає, що компоненти повинні лише ініціювати дії (викликати actions) для отримання чи оновлення
+        даних, а не містити бізнес-логіку. Компонентам слід залишити тільки функції відображення даних і взаємодії з
+        користувачем, тоді як логіка отримання даних з API виконується в actions.</p>
+    <ul style="font-size: 17px;">
+        <li>
+            Чистота компонентів. Компоненти стають легкими та орієнтованими на відображення, без бізнес-логіки чи
+            запитів.
+        </li>
+        <li>
+            Повторне використання. Один actions може бути використаний у багатьох компонентах, забезпечуючи єдиний
+            підхід
+            до обробки даних.
+        </li>
+        <li>
+            Контроль над станом. Компоненти не змінюють глобальний стан напряму, що забезпечує передбачуваність.
+        </li>
+    </ul>
+</section>
+
+<section class="slide">
+    <h2 class="shout" style="color: #fff">Дякую за увагу!</h2>
+    <figure>
+        <img class="cover" src="pictures/1.jpg" alt="">
+    </figure>
+</section>
+
 <div class="progress"></div>
 
 <script src="../../../core/shower.js"></script>
