Updated intro presentation

--- a/typescript/01-intro/presentation/index.html
+++ b/typescript/01-intro/presentation/index.html
@@ -117,10 +117,11 @@
     <h2>Чому потрібно вивчати TypeScript?</h2>
     <p>Дослідження DOU:</p>
     <ul>
-        <li>Кількість проектів написаних на TypeScript збільшилась на 29.9% у 2024 році</li>
+        <li>Кількість проєктів написаних на TypeScript збільшилась на > 30% у 2025 році</li>
         <li>Лідер “Особистих вподобань” для розробників</li>
         <li>2 місце у загальному рейтингу мов</li>
     </ul>
+    <a href="https://dou.ua/lenta/articles/language-rating-2025/">Рейтинг мов програмування 2025</a>
     <a href="https://dou.ua/lenta/articles/language-rating-2024/" target="_blank">Рейтинг мов програмування 2024</a>
     <br>
     <a href=https://dou.ua/lenta/articles/language-rating-2023/" target="_blank">Рейтинг мов програмування 2023</a>
@@ -159,7 +160,7 @@
             <ol>
                 <li>Встановити Node.js на ваш компʼютер (<a href="https://nodejs.org/en" target="_blank">nodejs.org</a>)
                 </li>
-                <li>Відкрити проект у редакторі коду</li>
+                <li>Відкрити проєкт у редакторі коду</li>
                 <li>Ініціалізувати новий проект - npm init -y</li>
                 <li>Встановити npm пакет TypeScript - npm i -D typescript</li>
                 <li>Транспіляція ваших файлів - npx (npm) tsc helloworld.ts</li>
