Done with Lab_1

--- a/solutions/lab_1/html.html
+++ b/solutions/lab_1/html.html
@@ -4,6 +4,8 @@
     <title>TypeScript Greeter</title>
 </head>
 <body>
-<script src="typesc.js"></script>
+
+<script src="icecream.js"></script>
+
 </body>
 </html>
